# ofLibs

./: .gitignore  _multistrap.conf  chalet.yaml  compile.sh  install.sh  local.sh  multistrap.conf  readme.md
2/: chalet.json  chaletMin.json  chalet_old.json  zlib_libpng_freeimage.json
FreeImage/: FreeImage_folders.sh  chalet.yaml
FreeImageRe/: chalet.yaml
OpenImageIO/: chalet.yaml
_old/: chalet.yaml
assimp/: assimp.sh  chalet.yaml  ios.sh
blend2d/: chalet.yaml
brotli/: chalet.yaml
cairo/: .env  build.sh  cairo.sh  chalet.yaml  macos-x86_64.txt
cpp-httplib/: chalet.yaml
curl/: chalet.yaml  curl.sh  test.sh
fmt/: chalet.yaml
freeimage/: chalet.yaml  freeimage.sh  freeimage_folders.sh
freetype/: chalet.yaml
glew/: chalet.yaml  glew_folders.sh
glfw/: chalet.yaml
glm/: chalet.yaml  glm_folders.sh
json/: chalet.yaml
kissfft/: chalet.yaml
lcms2/: chalet.yaml
libjpeg/: chalet.yaml
libpng/: chalet.yaml
libremidi/: chalet.yaml
libtiff/: chalet.yaml
libusb/: chalet.yaml  libusb_folders.sh  test.sh
libuvc/: chalet.yaml
libxml2/: chalet.yaml
lzma/: chalet.yaml
mango/: chalet.yaml
mango2/: chalet.yaml
opencv/: chalet.yaml  opencv_folders.sh  opencv_install.sh
opencv-dnn/: chalet.yaml
opencv-full/: chalet.yaml
openssl-curl/: openssl-curl.sh
pixman/: .env  chalet.yaml  pixman.sh
poco/: chalet.yaml
pugixml/: chalet.yaml  pugixml_folders.sh
rtAudio/: chalet.yaml
stag/: chalet.yaml
svgtiny/: chalet.yaml
tess2/: chalet.yaml  tess2.sh  tess2_folders.sh  tess2_ios.sh
videoInput/videoInput/: CMakeLists.txt
(+100 files in other folders)
